# dgx-lab-app

./: Makefile  README.md  requirements-all.txt  run.sh  stop.sh  tailscale-serve-off.sh  tailscale-serve-on.sh
apotheon_connector/: requirements.txt
apotheon_connector/app/: main.py
apotheon_connector/app/api/: routes_page.py  routes_recommend.py  routes_reindex.py  routes_search.py  routes_sitemap.py
apotheon_connector/app/core/: auth.py  config.py
apotheon_connector/app/indexing/: chunker.py  chunking.py  crawler.py  embeddings.py  extractor.py  pipeline.py
apotheon_connector/app/storage/: index_store.py  (+2 more)
dgx_ollama_console/: main.py  network.py  ollama.py  process.py
docs/: 00-repo-standards.md  01-architecture-overview.md  02-services-overview.md  03-website-connector.md  04-mcp-connector.md  05-claude-code-provider-switching.md  06-dgx-console-control-plane.md  07-development-workflows.md  08-scripts-and-automation.md  09-gpt-actions-openapi.md  README.md
mcp_repo_connector/: pyproject.toml  requirements.txt
mcp_repo_connector/mcp_repo_connector/: config.py  fs_tools.py  git_tools.py  security.py  server.py  website_client.py
mcp_repo_connector/scripts/: run-http.sh  run-stdio.sh
mcp_website_connector/: server.py
scripts/: claude-anthropic  claude-ollama  run-connector.sh
scripts/maintenance/: connector-cleanup.sh
scripts/systemd/: apotheon-connector-cleanup.service  apotheon-connector-daily-brief.service  apotheon-connector-daily-brief.timer  apotheon-connector-reindex.service  apotheon-connector-reindex.timer
supervisor/: main.py
